--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <script>
-            alert('test');
-        </script>
-    </body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+<script>
+    alert('test');
+</script>
+</body>
 </html>
