--- a/index.html
+++ b/index.html
@@ -3,43 +3,7 @@
 		<title>RGSS Computer Studies Course Selection Fair</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="icon" href="ico.png" />
-		<script src="gym.js"></script>
-		<style>
-			#shoppingCartDisplay {
-				overflow-x: scroll;
-			}
 
-			#shoppingCartDisplay div {
-				margin: 10px;
-				padding: 10px;
-				border-radius: 10px;
-				background-color: var(--bg-dark-color);
-				flex-shrink: 0;
-				transition: all ease-in-out 0.2s;
-				cursor: pointer;
-			}
-
-			#shoppingCartDisplay div:hover {
-				background-color: var(--highlight-color);
-			}
-
-			#shoppingCartDisplay div img {
-				float: left;
-				margin: 3px;
-				margin-right: 10px;
-			}
-
-			#shoppingCartDisplay div h1, #shoppingCartDisplay div p {
-				margin: 3px 10px;
-				padding: 3px;
-				overflow: hidden;
-				flex-shrink: 0;
-			}
-
-			#shoppingCartDisplay div h1 {
-				font-size: 20px;
-			}
-		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
@@ -59,14 +23,25 @@
 			<div id="contentart">
 				<svg id="contentart" width="200" height="50">
 					<polygon points="0,0 10,10 160,10 190,40 200,40 200,0" , fill="var(--bg-dark-color)"></polygon>
-				</svg>
+                </svg>
+                <p id="content">
+                    Are you interested in taking computer studies at Richmond Green?<br>
+                    Click on the link to play the game, and speak to some virtual teachers who can give a bit more information about
+                    the courses offered at Richmond Green Secondary School.
+                    <br>
+                    <br>
+                    Use the <b>WASD</b> keys to move yourself around the gym.
+                    <br>
+                    Talk to people and pick up items using the <b>Spacebar</b>.
+                    <br>
+                    <br>
+
+                    <a href="gym.html">Go to the virtual gym</a>
+                </p>
+
+                
 			</div>
 
-			<div id="gameContainer" style="display: flex; justify-content: center; margin: 20px 10%; background-color: var(--bg-dark-color); border-radius: 10px; width: 512px;">
-				<canvas width="512" height="384" id="gameCanvas" style="border-radius: 10px;"></canvas>
-			</div>
-			<div id="shoppingCartDisplay" style="display: flex;"></div>
-			<div id="checkoutDisplay" style="height: 0; transition: all ease-out 2s; background-color: var(--bg-dark-color); overflow: hidden;"></div>
 		</div>
 		
 		<div id="footer">
@@ -75,7 +50,7 @@
 					<polygon points="0,25 25,0 50,25" fill="var(--bg-color)"></polygon>
 				</svg>
 			</div>
-			<p>Copyright 2020 Livernet</p>
+			<p>The code and design of this webpage was primarily created by Grade 11 student Oliver.</p>
 		</div>
 	</body>
 </html>
