text line parsing

--- a/gym.html
+++ b/gym.html
@@ -62,7 +62,7 @@
 				</svg>
 			</div>
 
-			<div id="gameContainer" style="display: flex; justify-content: center; margin: 20px 10%; background-color: var(--bg-dark-color); border-radius: 10px; width: 512px;">
+			<div id="gameContainer">
 				<canvas width="512" height="384" id="gameCanvas" style="border-radius: 10px;"></canvas>
 			</div>
 			<div id="shoppingCartDisplay" style="display: flex;"></div>
@@ -75,7 +75,7 @@
 					<polygon points="0,25 25,0 50,25" fill="var(--bg-color)"></polygon>
 				</svg>
 			</div>
-			<p>Copyright 2020 Livernet</p>
+			<p>The code and design of this webpage was primarily created by Grade 11 student Oliver.</p>
 		</div>
 	</body>
 </html>
