--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
                     the courses offered at Richmond Green Secondary School.
                     <br>
                     <br>
+                    On your computer:<br>
                     Use the <b>WASD</b> keys to move yourself around the gym.
                     <br>
                     Talk to people and pick up items using the <b>Spacebar</b>.
                     <br>
                     <br>
+                    On your phone or tablet:<br>
+                    Move by tapping on the screen.  Pick up items by tapping on them.
+                    <br>
+                    People will talk to you when you wait for them to speak.  
 
                     <a href="gym.html">Go to the virtual gym</a>
                 </p>
