--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
                     Talk to people and pick up items using the <b>Spacebar</b>.
                     <br>
                     <br>
-                    On your phone or tablet:<br>
+                    On your phone or tablet:  <br>
                     Move by tapping on the screen.  Pick up items by tapping on them.
                     <br>
                     People will talk to you when you wait for them to speak.  
 
                     <a href="gym.html">Go to the virtual gym</a>
+
+                    <br>
+                    <br>
+                    Special thanks to Oliver for providing this amazing framework!
                 </p>
 
                 
