--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="content">
 			<div id="contentart">
 				<svg id="contentart" width="200" height="50">
-					<polygon points="0,0 10,10 160,10 190,40 200,40 200,0" , fill="var(--bg-dark-color)"></polygon>
+					<polygon points="0,0 10,10 160,10 190,40 200,40 200,0" , fill="var(--bg-dark-color)"></polygon>a
                 </svg>
                 <p id="content">
                     Are you interested in taking computer studies at Richmond Green?<br>
@@ -40,8 +40,10 @@
                     Move by tapping on the screen.  Pick up items by tapping on them.
                     <br>
                     People will talk to you when you wait for them to speak.  
+                    <br>
+                    <br>
 
-                    <a href="gym.html">Go to the virtual gym</a>
+                    <a href="gym.html">Go to the virtual course fair now!</a>
 
                     <br>
                     <br>
